--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ flake8 = "^4.0.1"
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
